[package]
name = "log-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Shun Su <781836670@qq.com>"]
license = "MIT OR Apache-2.0"
description = "A big log file viewer"
repository = "https://github.com/gitksqc/log-viewer.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

